deploy/k8s/overlays/quickstart/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platformup2date
  labels:
    app.kubernetes.io/name: platformup2date
